--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "scavanger backend application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "npm i && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ares",
