--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^17.8.1",
+    "hapi-cron": "^1.0.5",
     "hapi-swagger": "^9.3.0",
     "inert": "^5.1.2",
     "joi": "^14.3.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.3",
     "nodemon": "^1.18.9",
     "vision": "^5.4.4"
